[project]
name = "DataScienceTextbook"
version = "0.1.0"
description = "Add a short description here"
dependencies = [
    "numpy>=1.24.4",
    "scipy>=1.10.1",
    "pandas>=2.0.3",
    "matplotlib>=3.7.2",
    "plotly>=5.15.0",
    "tqdm>=4.65.0",
    "seaborn>=0.12.2",
    "ipykernel>=6.24.0",
    "scikit-learn>=1.3.0",
    "torch==2.0.1+cu118",
    "opencv-python>=4.8.0.74",
    "Pillow>=10.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
